--- a/src/ui/Pagination.css
+++ b/src/ui/Pagination.css
@@ -1,13 +1,3 @@
 .widget-pagination {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.widget-pagination > button,
-.widget-pagination > div {
-    margin-left: 1em;
-}
-.widget-pagination:first-child {
-    margin-left: 0;
+    margin: 0.5em 0;
 }
