added dropdown pagination type

--- a/src/ui/AdvancedPagination.scss
+++ b/src/ui/AdvancedPagination.scss
@@ -19,8 +19,7 @@ $padding: 1rem;
             padding: 1rem;
         }
     }
-    input,
-    select {
+    input.page-size {
         width: 7rem;
     }
 
