--- a/src/ui/AdvancedPagination.scss
+++ b/src/ui/AdvancedPagination.scss
@@ -4,7 +4,8 @@ $padding: 1rem;
     align-items: center;
     gap: $padding;
     .per-page-pagination,
-    .navigation-pagination {
+    .navigation-pagination,
+    .dropdown-pagination {
         display: flex;
         align-items: center;
         gap: $padding;
